# devbase

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_SPLIT_PLAN.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROJECT_STATUS_2026-04-29.md  README.md  REGISTRY_SUBMISSION.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.0_github.md  RELEASE_NOTES_v0.9.0.md  SESSION_HANDOFF_TEMPLATE.md  STAGE_REPORT_2026-04-09.md  check_db.py  check_state.py  mcp.json  rustfmt.toml  server.json  smithery.yaml
.github/workflows/: ci.yml
benches/: registry_bench.rs  semantic_index.rs
configs/: kimi-mcp.json
crates/devbase-core-types/: Cargo.toml
crates/devbase-core-types/src/: lib.rs
crates/devbase-embedding/: Cargo.toml
crates/devbase-registry-call-graph/: Cargo.toml
crates/devbase-registry-code-symbols/: Cargo.toml
crates/devbase-registry-dead-code/: Cargo.toml
crates/devbase-registry-entity/: Cargo.toml
crates/devbase-registry-health/: Cargo.toml
crates/devbase-registry-metrics/: Cargo.toml
crates/devbase-registry-metrics/src/: lib.rs
crates/devbase-registry-relation/: Cargo.toml
crates/devbase-registry-workspace/: Cargo.toml
crates/devbase-skill-runtime-parser/: Cargo.toml
crates/devbase-skill-runtime-parser/src/: lib.rs
crates/devbase-skill-runtime-types/: Cargo.toml
crates/devbase-skill-runtime-types/src/: lib.rs
crates/devbase-symbol-links/: Cargo.toml
crates/devbase-symbol-links/src/: lib.rs
crates/devbase-sync-protocol/: Cargo.toml
crates/devbase-sync-protocol/src/: lib.rs
crates/devbase-syncthing-client/: Cargo.toml
crates/devbase-syncthing-client/src/: lib.rs
crates/devbase-vault-frontmatter/: Cargo.toml
crates/devbase-vault-frontmatter/src/: lib.rs
crates/devbase-vault-wikilink/: Cargo.toml
crates/devbase-vault-wikilink/src/: lib.rs
crates/devbase-workflow-interpolate/: Cargo.toml
crates/devbase-workflow-model/: Cargo.toml
crates/devbase-workflow-model/src/: lib.rs
docs/: AUDIT_INDEX.md  README.md  ROADMAP.md  VAULT_FORMAT_SPEC.md  ai-protocol.md  architecture_audit_20260415.md  competitive-analysis.md  competitive-risks.md  competitive_analysis_plan.md  mcp-5ire-integration.md  mcp-integration-guide.md  mcp_contract.md  memory_infrastructure_design.md  plan-v0.11.0-pool.md  referenced_repos_report.md  roadmap-2026.md  smoke_test_report_20260418.md  sprint_2_plan.md  user_testing_guide.md
docs/_archive/: 0423-cross-project-meeting.md  AUDIT_INDEX.md  STAGE_REPORT_2026-04-10.md  execution-plan.md  skill-runtime.md  sprint_2_plan.md  tui-skill-integration.md
docs/_audit/: 2026-04-26-architecture.md  2026-04-26-code-health-coupling.md  2026-04-26-code-quality.md  2026-04-26-embedding-research.md  2026-04-26-hard-veto-review.md  2026-04-26-six-dimension.md  2026-04-26-veto-markers.md  2026-04-26-veto-meta-review.md  architecture-analysis-20260430.md  code-quality-audit-20260430.md  six-dimension-gap-analysis-20260430.md
docs/architecture/: context-compiler.md  dependency-topology.md  pre-split-evaluation.md  redefinition.md  workflow-dsl.md  workspace-as-schema.md
docs/guides/: README.md  ai-instance-handoff.md  cli-reference.md  mcp-5ire-integration.md  mcp-integration-guide.md  mcp-integration.md  quickstart.md  vault-workflow.md
docs/ops/: code-review-and-ops-plan.md  roadmap-v0.14-v0.16.md
docs/plans/: DEVELOPMENT_ROADMAP_0423.md  ai-native-storage-plan.md  docs-reorganization-plan-v0.13.0.md  l0-l4-knowledge-model.md  personal-knowledge-graph.md  roadmap-2026.md  skill-runtime.md  sse-daemon-design.md  tui-skill-integration.md
docs/progress/: progress-20260430.md
docs/reference/: README.md  entities-model.md  mcp-tools.md  schema-v23.md
docs/reports/: ai-self-assessment-20260501.md  architecture-audit-2026-04-26.md
docs/research/: ai-infrastructure-analysis.md  architecture_audit_20260415.md  competitive-analysis.md  competitive-roadmap-table-a.md  memory_infrastructure_design.md  referenced_repos_report.md  unified-analysis.md
docs/testing/: auditee-guide.md
docs/theory/: AI_TOOL_CONTEXT_RESEARCH.md  three-repositories.md
examples/: ai_first_user.rs
scripts/: install.ps1  install.sh
skills/embed-repo/: SKILL.md
skills/knowledge-report/: SKILL.md
skills/search-workspace/: SKILL.md
spike/candle-embedding/: Cargo.toml
src/: arxiv.rs  asyncgit.rs  backup.rs  config.rs  daemon.rs  dependency_graph.rs  digest.rs  discovery_engine.rs  embedding.rs  health.rs  i18n.rs  knowledge_engine.rs  lib.rs  main.rs  mcp.rs  oplog_analytics.rs  query.rs  registry.rs  scan.rs  search.rs  semantic_index.rs  skill_sync.rs  storage.rs  symbol_links.rs  sync.rs  sync_protocol.rs  syncthing_client.rs  test_utils.rs  tui.rs  watch.rs
src/commands/: analysis.rs  knowledge.rs  limit.rs  mod.rs  repo.rs  simple.rs  skill.rs  system.rs  workflow.rs
src/core/: mod.rs  node.rs
src/i18n/: en.rs  mod.rs  zh_cn.rs
src/knowledge_engine/: fallback.rs  index.rs  index_state.rs  llm.rs  mod.rs  module.rs  readme.rs
src/mcp/: clients.rs  mod.rs  tests.rs  tools.rs
src/registry/: call_graph.rs  code_symbols.rs  core.rs  dead_code.rs  entity.rs  health.rs  knowledge.rs  knowledge_meta.rs  known_limits.rs  links.rs  metrics.rs  migrate.rs  relation.rs  repo.rs  repos_toml.rs  test_helpers.rs  tests.rs  vault.rs  workspace.rs
src/repository/: dependency.rs  health.rs  knowledge.rs  mod.rs  repo.rs  search.rs  symbol.rs  workspace.rs
src/search/: hybrid.rs
src/semantic_index/: call_graph.rs  git_diff.rs  mod.rs  persist.rs  symbol.rs
src/skill_runtime/: clarity_sync.rs  dependency.rs  discover.rs  executor.rs  mod.rs  parser.rs  publish.rs  registry.rs  scoring.rs
src/sync/: orchestrator.rs  policy.rs  tasks.rs  tests.rs
src/tui/: event.rs  layout.rs  mod.rs  render.rs  state.rs  theme.rs
src/vault/: backlinks.rs  frontmatter.rs  fs_io.rs  indexer.rs  mod.rs  (+2 more)
tests/: cli.rs
tools/: clean_db.rs  migrate-third-party.ps1  register_papers.py
tools/embedding-provider-rs/: Cargo.toml  README.md
tools/embedding-provider-rs/src/: main.rs
(+82 files in other folders)
