[package]
name = "devbase"
version = "0.14.0"
edition = "2024"
description = "Developer workspace database and knowledge-base manager"
authors = ["juice094 <160722440+juice094@users.noreply.github.com>"]

[[bench]]
name = "semantic_index"
harness = false

[[bench]]
name = "registry_bench"
harness = false

[features]
default = ["tui", "local-embedding"]
tui = ["ratatui", "crossterm", "watch"]
watch = ["notify"]
# Sprint 14: local embedding via candle + all-MiniLM-L6-v2
local-embedding = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]


[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
anyhow = "1"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tantivy = "0.26"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.27.0"
blake3 = "1.5"
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }
crossbeam-channel = "0.5"
notify = { version = "8.2.0", optional = true }
which = "7"
tokei = "14.0.0"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
serde_yaml = "0.9"
regex = "1"
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers = { version = "0.22", default-features = false, features = [], optional = true }
hf-hub = { version = "0.5", optional = true }

# Extracted crates (zero internal coupling)
devbase-symbol-links = { path = "crates/devbase-symbol-links" }
devbase-sync-protocol = { path = "crates/devbase-sync-protocol" }
devbase-core-types = { path = "crates/devbase-core-types" }
devbase-syncthing-client = { path = "crates/devbase-syncthing-client" }
devbase-vault-frontmatter = { path = "crates/devbase-vault-frontmatter" }
devbase-vault-wikilink = { path = "crates/devbase-vault-wikilink" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.14.0"
authors = ["juice094 <160722440+juice094@users.noreply.github.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/juice094/devbase"


