[package]
name = "devbase-embedding"
version = "0.15.0"
edition = "2024"
authors = ["juice094 <160722440+juice094@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/juice094/devbase"

[features]
default = ["local-embedding"]
local-embedding = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]

[dependencies]
anyhow = "1"
serde_json = "1"
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers = { version = "0.22", default-features = false, features = [], optional = true }
hf-hub = { version = "0.5", optional = true }
